--- a/about.html
+++ b/about.html
@@ -12,8 +12,10 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding: 20px;          /* Footer height */
+  padding: 20px;
+  justify-content: space-between;      
 }
+
 </style>
 </head>
 <body>
