--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/EARNISDEADHEADER2.png" alt="Logo" class="logo-main">
         <nav class="menu">
             <ul>
-              <li><a href="/">Work</a></li>
+              <li><a href="">Work</a></li>
               <li><a href="shop">Shop</a></li>
               <li><a href="about">About</a></li>
 
@@ -23,15 +23,15 @@
     <!-- Main Content -->
     <main class="main-content">
         <div class="photo-column">
-            <a title="work" href="/awaken, my love"><img class="column-picture" src="images/1723805570169.jpg" alt="work"></a>
-            <a title="work" href="/child with wolves"><img class="column-picture" src="images/1723805570255.jpg" alt="work"></a>
+            <a title="work" href="awakenmylove"><img class="column-picture" src="images/1723805570169.jpg" alt="work"></a>
+            <a title="work" href="childwithwolves"><img class="column-picture" src="images/1723805570255.jpg" alt="work"></a>
         </div>
         <div class="photo-column">
-            <a title="work" href="/faces"><img class="column-picture" src="images/1723805570221.jpg" alt="work"></a>
-            <a title="work" href="/colorsnshapez"><img class="column-picture" src="images/1723805570316.jpg" alt="work"></a>
+            <a title="work" href="faces"><img class="column-picture" src="images/1723805570221.jpg" alt="work"></a>
+            <a title="work" href="colorsnshapez"><img class="column-picture" src="images/1723805570316.jpg" alt="work"></a>
         </div>
         <div class="photo-column">
-            <a title="work" href="/limerencia"><img class="column-picture" src="images/1723805570188.jpg" alt="work"></a>
+            <a title="work" href="limerencia"><img class="column-picture" src="images/1723805570188.jpg" alt="work"></a>
 
         </div>
     </main>
