--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding: 20px;
-  justify-content: space-between;      
+  justify-content: space-between;
+
 }
+
 
 </style>
 </head>
@@ -24,7 +25,7 @@
         <img src="images/EARNISDEADHEADER2.png" alt="Logo" class="logo">
         <nav class="menu">
             <ul>
-              <li><a href="/">Work</a></li>
+              <li><a href="">Work</a></li>
               <li><a href="shop">Shop</a></li>
               <li><a href="about">About</a></li>
 
