--- a/childwithwolves.html
+++ b/childwithwolves.html
@@ -105,7 +105,7 @@ img {vertical-align: middle;}
         <img src="images/EARNISDEADHEADER2.png" alt="Logo" class="logo">
         <nav class="menu">
             <ul>
-              <li><a href="/">Work</a></li>
+              <li><a href="">Work</a></li>
               <li><a href="shop">Shop</a></li>
               <li><a href="about">About</a></li>
 
