--- a/shop.html
+++ b/shop.html
@@ -9,14 +9,13 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <img src="images/EARNISDEADHEADER2.png" alt="Logo" class="logo">
+        <img src="images/giftshopwebcrop2.gif" alt="Logo" class="logo">
         <nav class="menu">
             <ul>
-                <li><a href="">Work</a></li>
-                <li><a href="shop">Shop</a></li>
-                <li><a href="about">About</a></li>
-
-            </ul>
+              
+                <li><a href="/">﹤ back </a></li>
+  
+              </ul>
         </nav>
     </header>
 
@@ -60,13 +59,7 @@
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <ul class="socials">
-            <li><a href="https://www.instagram.com/earnisdead/">Instagram</a></li>
-            <li><a href="/">earnisdead © 2024</a></li>
-
-        </ul>
-    </footer>
+    
+   
 </body>
 </html>
