--- a/awakenmylove.html
+++ b/awakenmylove.html
@@ -14,7 +14,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 95%;
   position: relative;
   margin: auto;
 }
@@ -43,7 +43,7 @@ img {vertical-align: middle;}
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: none;
 }
 
 /* Caption text */
@@ -102,12 +102,11 @@ img {vertical-align: middle;}
 <body>
     <!-- Header -->
     <header class="header">
-        <img src="images/EARNISDEADHEADER2.png" alt="Logo" class="logo">
+        
         <nav class="menu">
             <ul>
-              <li><a href="">Work</a></li>
-              <li><a href="shop">Shop</a></li>
-              <li><a href="about">About</a></li>
+              
+              <li><a href="/work">﹤ back </a></li>
 
             </ul>
         </nav>
@@ -115,13 +114,6 @@ img {vertical-align: middle;}
 
     <!-- Main Content -->
     <main class="main-content">
-        <div class="photo-column">
-            <h1>“awaken, my love!”</h1>
-            <h2>3d illustration 2024 </h2>
-
-            <p>Reimagination of the cover from Childish Gambino’s 4th studio album.
-            </p>
-        </div>
         <div class="photo-column">
           <div class="slideshow-container">
 
@@ -142,17 +134,19 @@ img {vertical-align: middle;}
 
 
         </div>
+        <div class="photo-column">
+        <div class="descripcion"> 
+          <h1>“awaken, my love!”</h1>
+          <h2>3d illustration - 2024</h2>
+
+          <p>Reimagination of<br>the cover from<br>Childish Gambino’s<br>4th studio album.
+          </p>
+      </div>
+    </div>
 
     </main>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <ul class="socials">
-            <li><a href="https://www.instagram.com/earnisdead/">Instagram</a></li>
-            <li><a href="/">earnisdead © 2024</a></li>
-
-        </ul>
-    </footer>
+   
     <script>
 let slideIndex = 1;
 showSlides(slideIndex);
