--- a/intro2.html
+++ b/intro2.html
@@ -101,7 +101,7 @@ data-image{
             <a href="/about" class="hover-link" data-image="images/aboutwebcrop.gif">about</a>
         </div>
         <div class="column">
-            <a href="shop" class="hover-link" data-image="images/giftshopwebcrop2.gif">gift shop</a>
+            <a href="/shop" class="hover-link" data-image="images/giftshopwebcrop2.gif">gift shop</a>
         </div>
     </div>
     
