--- a/awakenmylove.html
+++ b/awakenmylove.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <meta property="og:title" content="EARNISDEAD">
+    <meta property="og:image" content="favicon.png">
+    <meta property="og:description" content="earnisdead">
+    <meta property="og:url" content="https://earnisdead.com">
     <title>earnisdead</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 <style>
 * {box-sizing: border-box}
 
