--- a/work.html
+++ b/work.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <meta property="og:title" content="EARNISDEAD">
+    <meta property="og:image" content="favicon.png">
+    <meta property="og:description" content="earnisdead">
+    <meta property="og:url" content="https://earnisdead.com">
     <title>earnisdead</title>
     <link rel="stylesheet" href="stylework.css">
 </head>
