--- a/awakenmylove.html
+++ b/awakenmylove.html
@@ -126,6 +126,10 @@ img {vertical-align: middle;}
                   <img src="images/1723805570169.jpg" style="width:100%">
                   <div class="text"></div>
                   </div>
+                  <div class="mySlides fade">
+                  <img src="images/1723805570272.jpg" style="width:100%">
+                  <div class="text"></div>
+                  </div>
 
                   <a class="prev" onclick="plusSlides(-1)">❮</a>
                   <a class="next" onclick="plusSlides(1)">❯</a>
