--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
             </h1>
             <p>madebyearn@gmail.com</p>
             <p><a class="text" href="https://www.instagram.com/earnisdead/">@earnisdead</a></p>
+            <p><a class="vigas" href="https://www.vigasworks.com">code by vigas.works</a></p>
           </div>
           <div class="photo-column">
             <img src="images/cabezagiraweb.gif" style="width:100%">
