jamiroquai al work

--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
     <main class="main-content">
     <div class="gallery">
         <a href="#" class="gallery-item"><img src="images/1723805570188.jpg" alt="Image 1"></a>
-        <a href="#" class="gallery-item"><img src="images/giftshopwebcrop.gif" alt="Image 2"></a>
+        <a href="#" class="gallery-item"><img src="images/jamiroquai3.png" alt="Image 2"></a>
         <a href="#" class="gallery-item"><img src="images/1723805570301.jpg" alt="Image 3"></a>
         <a href="#" class="gallery-item"><img src="images/EARNISDEADHEADER2.png" alt="Image 4"></a>
         <a href="#" class="gallery-item"><img src="images/1723805570316.jpg" alt="Image 5"></a>
