--- a/work.html
+++ b/work.html
@@ -26,7 +26,7 @@
     <div class="gallery">
         <a href="#" class="gallery-item"><img src="images/1723805570188.jpg" alt="Image 1"></a>
         <a href="#" class="gallery-item"><img src="images/jamiroquai4.png" alt="Image 2"></a>
-        <a href="#" class="gallery-item"><img src="images/1723805570301.jpg" alt="Image 3"></a>
+        <a href="#" class="gallery-item"><img src="images/mapsiwt7.2.png" alt="Image 3"></a>
         <a href="#" class="gallery-item"><img src="images/EARNISDEADHEADER2.png" alt="Image 4"></a>
         <a href="#" class="gallery-item"><img src="images/1723805570316.jpg" alt="Image 5"></a>
         <!-- Add more images as needed -->
