--- a/work.html
+++ b/work.html
@@ -24,11 +24,12 @@
     </header>
     <main class="main-content">
     <div class="gallery">
-        <a href="#" class="gallery-item"><img src="images/1723805570188.jpg" alt="Image 1"></a>
+        <a href="#" class="gallery-item"><img src="images/limerenciaready.jpeg" alt="Image 1"></a>
         <a href="#" class="gallery-item"><img src="images/jamiroquai6.png" alt="Image 2"></a>
         <a href="#" class="gallery-item"><img src="images/mapsiwt7.2.png" alt="Image 3"></a>
-        <a href="#" class="gallery-item"><img src="images/EARNISDEADHEADER2.png" alt="Image 4"></a>
-        <a href="#" class="gallery-item"><img src="images/1723805570316.jpg" alt="Image 5"></a>
+        <a href="#" class="gallery-item"><img src="images/cruzdefotosiwtready.jpeg" alt="Image 4"></a>
+        <a href="#" class="gallery-item"><img src="images/childwithwolvesready.jpeg" alt="Image 5"></a>
+        <a href="#" class="gallery-item"><img src="images/facesready.jpg" alt="Image 6"></a>
         <!-- Add more images as needed -->
     </div>
 </main>
